Add API endpoint to get experimental data from the postgresql db
